syntax = "proto3";

package chat;

option go_package = "rpc/chat";

service ChatService {  
    rpc ChatStream(ChatStreamRequest) returns (stream ChatStreamResponse);
    rpc GetUserConversations(GetUserConversationsRequest) returns (GetUserConversationsResponse);
    rpc GetConversationMessages(GetConversationMessagesRequest) returns (GetConversationMessagesResponse);
    rpc DeleteConversation(DeleteConversationRequest) returns (DeleteConversationResponse);
}

message ChatStreamRequest {
    int32 user_id = 1;
    string prompt = 2;
    int32 conversation_id = 3;
    bool deepSearch = 4;
}

message ChatStreamResponse {
    string chunk = 1;
    int32 conversation_id = 2; 
}

message GetUserConversationsRequest {
    int32 user_id = 1;
}

message GetUserConversationsResponse {
    repeated Conversation conversations = 1;
}

message Conversation {
    int32 id = 1;
    string title = 2;
    int64 create_time = 3;
}

message Message {
    string role = 1;
    string content = 2;
    int64 create_time = 3;
}

message GetConversationMessagesRequest {
    int32 conversation_id = 1;
}

message GetConversationMessagesResponse {
    repeated Message messages = 1;
}

message DeleteConversationRequest {
    int32 conversation_id = 1;
}

message DeleteConversationResponse {
    bool success = 1;
}